# MFEM

./: .gitignore  .mailmap  CMakeLists.txt  CMakePresets.json
src/algebra/: CMakeLists.txt
src/continuum/: CMakeLists.txt
src/core/: AGENT.md  CMakeLists.txt  clean_source.sh
src/core/base/: AGENT.md  README.md  component.cpp  component.h  factory.cpp  factory.h  interface.cpp  interface.h  object.cpp  object.h  observer.cpp  observer.h  policy.cpp  policy.h  registry.cpp  registry.h  singleton.cpp  singleton.h  visitor.cpp  visitor.h
src/core/benchmarks/: CMakeLists.txt  README.md
src/core/benchmarks/base/: benchmark_object.cpp
src/core/cmake/: CoreConfig.cmake.in
src/core/concurrency/: AGENT.md  atomic_queue.h  barrier.h  condition_variable.h  latch.h  mutex.h  rwlock.h  semaphore.h  spinlock.h  task.h  task_graph.h  thread_pool.h  work_stealing_pool.h
src/core/config/: AGENT.md  README.md  config.h  config_manager.h  debug.h
src/core/error/: AGENT.md  contract.h  error_category.cpp  error_category.h  error_chain.h  error_code.h  error_context.h  error_guard.h  error_handler.h  error_message.h  exception_base.h  expected.h  invariant.h  logic_error.h  nested_exception.h  outcome.h  panic.h  postcondition.h  precondition.h  result.h  runtime_error.h  source_location.h  stack_trace.h  stack_trace_stub.cpp  status.h  system_error.h  try_catch.h  validation.h
src/core/events/: AGENT.md
src/core/filesystem/: AGENT.md
src/core/io/: AGENT.md
src/core/logging/: AGENT.md  README.md  assert.h  assert_logger_integration.h  asynclogger.h  debugstream.h  logbuffer.h  logcontext.h  logfilter.h  logformatter.h  logger.h  loggermanager.h  loglevel.h  logmessage.h  logsink.h  scopedlogger.h
src/core/memory/: AGENT.md  README.md  aligned_allocator.h  aligned_storage.h  allocator_base.h  allocator_traits.h  arena.h  arena_allocator.h  buddy_allocator.h  bump_vector.h  cache_line.h  circular_buffer.h  concurrent_pool.h  flat_map.h  flat_set.h  freelist_allocator.h  growing_pool.h  intrusive_list.h  malloc_allocator.h  memory_barrier.h  memory_mapped.h  memory_pool.h  memory_resource.h  memory_stats.h  memory_tracker.h  memory_utils.h  object_pool.h  pool_allocator.h  prefetch.h  ring_buffer.h  scoped_memory_tracker.h  shared_memory.h  slab_allocator.h  small_vector.h  stable_vector.h  stack_allocator.h  thread_pool_allocator.h
src/core/metrics/: AGENT.md
src/core/plugins/: AGENT.md
src/core/reflection/: AGENT.md
src/core/scripts/: README.md  coverage.sh  detailed_line_coverage.sh  install-dev-tools.sh
src/core/serialization/: AGENT.md
src/core/tests/: CMakeLists.txt  README.md  test_utils.h
src/core/tracing/: AGENT.md
src/core/workflow/: AGENT.md
src/io/: AGENT.md  CMakeLists.txt
src/numeric/: AGENT.md  CMakeLists.txt  CMakePresets.json  README.md  debug_complex.cpp  debug_eigen.cpp  debug_householder.cpp  debug_householder_complex.cpp  test_complete_diagnostic.cpp  test_correct_hermitian.cpp  test_cumulative_phase.cpp  test_hermitian_householder.cpp  test_hermitian_simple.cpp  test_householder_hermitian.cpp  test_phase_correction.cpp  test_phase_fix.cpp  test_reconstruct.cpp  test_single_householder.cpp  test_zlarfg_style.cpp
src/numeric/cmake/: CodeCoverage.cmake  ConfigureParallel_Numeric.cmake  EnableLAPACK.cmake  EnableOpenMP_Numeric.cmake  FEMNumericConfig.cmake.in  FetchTBB.cmake  fem_numeric.pc.in  fem_numeric_parallel_config.h.in
src/numeric/concepts/: algebra.h  promote.h
src/numeric/expression/: array_base.h
src/numeric/include/: numeric.h
src/numeric/include/algorithms/: iterator_algorithms.h
src/numeric/include/allocators/: AGENT.md
src/numeric/include/autodiff/: AGENT.md
src/numeric/include/backends/: AGENT.md  lapack_backend.h
src/numeric/include/base/: AGENT.md  README.md  allocator_base.h  broadcast_base.h  container_base.h  dual_base.h  dual_comparison.h  dual_math.h  expression_base.h  iterator_base.h  numeric_base.h  ops_base.h  slice_base.h  storage_base.h  traits_base.h  view_base.h
src/numeric/include/block/: AGENT.md
src/numeric/include/config/: AGENT.md  compiler.h  config.h  debug.h  features.h  platform.h  precision.h
src/numeric/include/constrained/: AGENT.md
src/numeric/include/core/: AGENT.md  README.md  block_matrix.h  block_tensor.h  block_vector.h  matrix.h  matrix_view.h  small_matrix.h  sparse_matrix.h  sparse_tensor.h  sparse_vector.h  tensor.h  tensor_view.h  vector.h  vector_view.h
src/numeric/include/decompositions/: AGENT.md  cholesky.h  eigen.h  ldlt.h  ldlt_blocked_bk.h  lu.h  qr.h  qr_pivoted.h  qr_pivoted_blocked.h  svd.h  workspace.h
src/numeric/include/diagnostics/: AGENT.md
src/numeric/include/expressions/: AGENT.md  evaluation.h
src/numeric/include/graph/: AGENT.md
src/numeric/include/indexing/: AGENT.md
src/numeric/include/io/: AGENT.md
src/numeric/include/linear_algebra/: AGENT.md  blas_level1.h  blas_level2.h  blas_level3.h  householder_wy.h  norms.h  sparse_ops.h
src/numeric/include/math/: AGENT.md
src/numeric/include/matrix_free/: AGENT.md
src/numeric/include/operations/: AGENT.md  arithmetic.h  reductions.h
src/numeric/include/optimization/: AGENT.md
src/numeric/include/parallel/: AGENT.md
src/numeric/include/polynomial/: AGENT.md
src/numeric/include/solvers/: AGENT.md
src/numeric/include/sparse/: AGENT.md
src/numeric/include/storage/: AGENT.md
src/numeric/include/support/: AGENT.md
src/numeric/include/traits/: AGENT.md  README.md  SFINAE.h  ad_traits.h  concepts.h  container_traits.h  container_utils.h  expression_traits.h  type_traits.h  (+5 more)
src/numeric/matrix/: concepts.h  matrix.h  operators.h  traits.h
src/numeric/scalar/: concepts.h  constants.h  epsilon.h  operators.h  traits.h
src/numeric/scripts/: coverage.sh  detailed_line_coverage.sh  install-dev-tools.sh
src/numeric/tests/: CMakeLists.txt
src/numeric/vector/: concepts.h  geometry.h  operators.h  traits.h  vector.h
src/parallel/: AGENT.md  CMakeLists.txt
src/physics/: AGENT.md  CMakeLists.txt
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/unit/: sample.cpp
(+202 files in other folders)
